# vdffit

./: .gitignore  LICENSE  get_data.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: python-test.yml
docs/: api.rst  conf.py  index.rst
docs/api/: vdffit.fitting.BiMaxFitter.rst  vdffit.fitting.FitterBase.rst  vdffit.fitting.PSPProtonCoreFitter.rst  vdffit.io.CDFFile.rst  vdffit.io.psp.MAGL2.rst  vdffit.io.psp.SPANL2CDF.rst  vdffit.io.solo.MAGL2.rst  vdffit.io.solo.PASL2CDF.rst  vdffit.util.Vector.rst  vdffit.vdf.PASDistribution.rst  vdffit.vdf.SPANDistribution.rst  vdffit.vdf.VDFBase.rst
vdffit/: __init__.py
vdffit/fitting/: __init__.py  base.py  bimax.py  psp.py
vdffit/io/: __init__.py  cdf.py
vdffit/io/psp/: __init__.py  mag.py  span.py
vdffit/io/solo/: __init__.py  mag.py  pas.py
vdffit/net/: psp.py
vdffit/tests/: test_psp.py
vdffit/util/: vector.py
vdffit/vdf/: __init__.py  pas.py  span.py  vdf.py
