[metadata]
name = vdffit
provides = vdffit
description = "Fitting solar wind velocity distribution functions"
long_description = file: README.md
long_description_content_type = text/markdown
author = David Stansby
author_email = dstansby@gmail.com
license = GPLv3
license_file = LICENSE
# url = https://pfsspy.readthedocs.io/en/stable/
edit_on_github = True
github_project = dstansby/vdffit
platform = any
keywords = solar physics, solar, science, sun
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.8
packages = vdffit
# include_package_data = True
install_requires =
  joblib
  numpy

# [options.extras_require]
docs =
  numpydoc
  sphinx
  sphinx-automodapi

[tool:pytest]
addopts = -ra
filterwarnings =
    error
